// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ItemRetailFee /> should render with props 1`] = `
<ItemRetailFee
  isFixed={true}
  isSmaller={true}
  minQty={20}
  price={15}
  unit="R"
>
  <div
    className="wrapper fixed-width small"
  >
    <Box
      marginTop={4}
    >
      <div
        className="M-t__4"
      >
        <ForwardRef(Text)
          color="gray38"
          lineHeight={16}
          size={12}
        >
          <span
            className="size-12 line-height-16 color__gray38"
          >
            Комплектация
            <span
              className="no-wrap"
            >
               + 
              <Price
                className="price"
                value={15}
              >
                <span
                  className="root price"
                >
                  15
                </span>
              </Price>
            </span>
            <span>
              при покупке до 
              20
               
              R
            </span>
          </span>
        </ForwardRef(Text)>
      </div>
    </Box>
  </div>
</ItemRetailFee>
`;

exports[`<ItemRetailFee /> should render without props 1`] = `
<ItemRetailFee>
  <div
    className="wrapper"
  >
    <Box
      marginTop={4}
    >
      <div
        className="M-t__4"
      >
        <ForwardRef(Text)
          color="gray38"
          lineHeight={20}
          size={14}
        >
          <span
            className="size-14 line-height-20 color__gray38"
          >
            Комплектация
            <span
              className="no-wrap"
            >
               + 
              <Price
                className="price"
              >
                <span
                  className="root price"
                />
              </Price>
            </span>
          </span>
        </ForwardRef(Text)>
      </div>
    </Box>
  </div>
</ItemRetailFee>
`;
